# IllinoisWeather

./: .gitignore  About.md  Questions.md  README.md  column_headers.md  environment.yml  extracting_weather_data.ipynb  main.py  pixi.toml  pyproject.toml  station_column_headers.md  test_credentials.py  weather_analysis.ipynb  weather_column_headers.md  weather_query.sql
data/: noaa_gsod_stations.csv
tests/: test_credentials.py
