[project]
name = "weather"
version = "0.1.0"
authors = ["Henry Cuzco <40706933+uiucmeche1317@users.noreply.github.com>"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge", "main", "r", "msys2", "https://repo.anaconda.com/pkgs/main", "https://repo.anaconda.com/pkgs/r"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
aiohappyeyeballs = { version = "==2.6.1", build = "pyhd8ed1ab_0" }
aiohttp = { version = "==3.12.13", build = "py313ha9b7d5b_0" }
aiosignal = { version = "==1.3.2", build = "pyhd8ed1ab_0" }
anyio = { version = "==4.9.0", build = "pyh29332c3_0" }
appnope = { version = "==0.1.4", build = "pyhd8ed1ab_1" }
argon2-cffi = { version = "==23.1.0", build = "pyhd8ed1ab_1" }
argon2-cffi-bindings = { version = "==21.2.0", build = "py313h20a7fcf_5" }
arrow = { version = "==1.3.0", build = "pyhd8ed1ab_1" }
asttokens = { version = "==3.0.0", build = "pyhd8ed1ab_1" }
async-lru = { version = "==2.0.5", build = "pyh29332c3_0" }
attrs = { version = "==25.3.0", build = "pyh71513ae_0" }
aws-c-auth = { version = "==0.8.7", build = "h771b9f8_1" }
aws-c-cal = { version = "==0.8.7", build = "hf78e982_1" }
aws-c-common = { version = "==0.12.1", build = "h5505292_0" }
aws-c-compression = { version = "==0.3.1", build = "h2da6199_3" }
aws-c-event-stream = { version = "==0.5.4", build = "hc8cef5c_3" }
aws-c-http = { version = "==0.9.5", build = "h7ae4978_0" }
aws-c-io = { version = "==0.17.0", build = "hda12475_8" }
aws-c-mqtt = { version = "==0.12.2", build = "hd618802_3" }
aws-c-s3 = { version = "==0.7.13", build = "hb321cbc_3" }
aws-c-sdkutils = { version = "==0.2.3", build = "h2da6199_3" }
aws-checksums = { version = "==0.2.3", build = "h2da6199_3" }
aws-crt-cpp = { version = "==0.31.1", build = "hf6bcbf0_1" }
aws-sdk-cpp = { version = "==1.11.510", build = "hbf97231_4" }
azure-core-cpp = { version = "==1.14.0", build = "hd50102c_0" }
azure-identity-cpp = { version = "==1.10.0", build = "hc602bab_0" }
azure-storage-blobs-cpp = { version = "==12.13.0", build = "h7585a09_1" }
azure-storage-common-cpp = { version = "==12.8.0", build = "h9ca1f76_1" }
azure-storage-files-datalake-cpp = { version = "==12.12.0", build = "hcdd55da_1" }
babel = { version = "==2.17.0", build = "pyhd8ed1ab_0" }
beautifulsoup4 = { version = "==4.13.3", build = "pyha770c72_0" }
bleach = { version = "==6.2.0", build = "pyh29332c3_4" }
bleach-with-css = { version = "==6.2.0", build = "h82add2a_4" }
blinker = { version = "==1.9.0", build = "pyhff2d567_0" }
brotli = { version = "==1.1.0", build = "hd74edd7_2" }
brotli-bin = { version = "==1.1.0", build = "hd74edd7_2" }
brotli-python = { version = "==1.1.0", build = "py313h3579c5c_2" }
bzip2 = { version = "==1.0.8", build = "h99b78c6_7" }
c-ares = { version = "==1.34.5", build = "h5505292_0" }
ca-certificates = { version = "==2025.6.15", build = "hbd8a1cb_0" }
cached-property = { version = "==1.5.2", build = "hd8ed1ab_1" }
cached_property = { version = "==1.5.2", build = "pyha770c72_1" }
cachetools = { version = "==5.5.2", build = "pyhd8ed1ab_0" }
certifi = { version = "==2025.6.15", build = "pyhd8ed1ab_0" }
cffi = { version = "==1.17.1", build = "py313hc845a76_0" }
charset-normalizer = { version = "==3.4.1", build = "pyhd8ed1ab_0" }
click = { version = "==8.2.1", build = "pyh707e725_0" }
comm = { version = "==0.2.2", build = "pyhd8ed1ab_1" }
contourpy = { version = "==1.3.1", build = "py313h0ebd0e5_0" }
cryptography = { version = "==45.0.4", build = "py313h54e0d97_0" }
cycler = { version = "==0.12.1", build = "pyhd8ed1ab_1" }
db-dtypes = { version = "==1.4.3", build = "pyhd8ed1ab_0" }
debugpy = { version = "==1.8.14", build = "py313h928ef07_0" }
decorator = { version = "==5.2.1", build = "pyhd8ed1ab_0" }
defusedxml = { version = "==0.7.1", build = "pyhd8ed1ab_0" }
exceptiongroup = { version = "==1.2.2", build = "pyhd8ed1ab_1" }
executing = { version = "==2.1.0", build = "pyhd8ed1ab_1" }
fastavro = { version = "==1.11.1", build = "py313h90d716c_0" }
fonttools = { version = "==4.57.0", build = "py313ha9b7d5b_0" }
fqdn = { version = "==1.5.1", build = "pyhd8ed1ab_1" }
freetype = { version = "==2.13.3", build = "h1d14073_0" }
frozenlist = { version = "==1.6.0", build = "py313h857e90f_0" }
gflags = { version = "==2.2.2", build = "hf9b8971_1005" }
glog = { version = "==0.7.1", build = "heb240a5_0" }
google-api-core = { version = "==2.25.1", build = "pyhd8ed1ab_0" }
google-api-core-grpc = { version = "==2.25.1", build = "hd8ed1ab_0" }
google-auth = { version = "==2.40.3", build = "pyhd8ed1ab_0" }
google-auth-oauthlib = { version = "==1.2.2", build = "pyhd8ed1ab_0" }
google-cloud-bigquery-core = { version = "==3.34.0", build = "pyhd8ed1ab_0" }
google-cloud-bigquery-storage = { version = "==2.31.0", build = "pyhd8ed1ab_0" }
google-cloud-bigquery-storage-core = { version = "==2.31.0", build = "pyhd8ed1ab_0" }
google-cloud-core = { version = "==2.4.3", build = "pyhd8ed1ab_0" }
google-crc32c = { version = "==1.7.1", build = "py313h3267b8e_0" }
google-resumable-media = { version = "==2.7.2", build = "pyhd8ed1ab_2" }
googleapis-common-protos = { version = "==1.70.0", build = "pyhd8ed1ab_0" }
grpcio = { version = "==1.71.0", build = "py313h70d2987_0" }
grpcio-status = { version = "==1.71.0", build = "pyhd8ed1ab_0" }
h11 = { version = "==0.14.0", build = "pyhd8ed1ab_1" }
h2 = { version = "==4.2.0", build = "pyhd8ed1ab_0" }
hpack = { version = "==4.1.0", build = "pyhd8ed1ab_0" }
httpcore = { version = "==1.0.7", build = "pyh29332c3_1" }
httpx = { version = "==0.28.1", build = "pyhd8ed1ab_0" }
hyperframe = { version = "==6.1.0", build = "pyhd8ed1ab_0" }
icu = { version = "==75.1", build = "hfee45f7_0" }
idna = { version = "==3.10", build = "pyhd8ed1ab_1" }
importlib-metadata = { version = "==8.6.1", build = "pyha770c72_0" }
importlib_resources = { version = "==6.5.2", build = "pyhd8ed1ab_0" }
ipykernel = { version = "==6.29.5", build = "pyh57ce528_0" }
ipython = { version = "==9.1.0", build = "pyhfb0248b_0" }
ipython_pygments_lexers = { version = "==1.1.1", build = "pyhd8ed1ab_0" }
ipywidgets = { version = "==8.1.6", build = "pyhd8ed1ab_0" }
isoduration = { version = "==20.11.0", build = "pyhd8ed1ab_1" }
jedi = { version = "==0.19.2", build = "pyhd8ed1ab_1" }
jinja2 = { version = "==3.1.6", build = "pyhd8ed1ab_0" }
joblib = { version = "==1.5.1", build = "pyhd8ed1ab_0" }
json5 = { version = "==0.12.0", build = "pyhd8ed1ab_0" }
jsonpointer = { version = "==3.0.0", build = "py313h8f79df9_1" }
jsonschema = { version = "==4.23.0", build = "pyhd8ed1ab_1" }
jsonschema-specifications = { version = "==2024.10.1", build = "pyhd8ed1ab_1" }
jsonschema-with-format-nongpl = { version = "==4.23.0", build = "hd8ed1ab_1" }
jupyter = { version = "==1.1.1", build = "pyhd8ed1ab_1" }
jupyter-lsp = { version = "==2.2.5", build = "pyhd8ed1ab_1" }
jupyter_client = { version = "==8.6.3", build = "pyhd8ed1ab_1" }
jupyter_console = { version = "==6.6.3", build = "pyhd8ed1ab_1" }
jupyter_core = { version = "==5.7.2", build = "pyh31011fe_1" }
jupyter_events = { version = "==0.12.0", build = "pyh29332c3_0" }
jupyter_server = { version = "==2.15.0", build = "pyhd8ed1ab_0" }
jupyter_server_terminals = { version = "==0.5.3", build = "pyhd8ed1ab_1" }
jupyterlab = { version = "==4.4.0", build = "pyhd8ed1ab_0" }
jupyterlab_pygments = { version = "==0.3.0", build = "pyhd8ed1ab_2" }
jupyterlab_server = { version = "==2.27.3", build = "pyhd8ed1ab_1" }
jupyterlab_widgets = { version = "==3.0.14", build = "pyhd8ed1ab_0" }
kiwisolver = { version = "==1.4.7", build = "py313hf9c7212_0" }
krb5 = { version = "==1.21.3", build = "h237132a_0" }
lcms2 = { version = "==2.17", build = "h7eeda09_0" }
lerc = { version = "==4.0.0", build = "h9a09cb3_0" }
libabseil = { version = "==20250127.1", build = "cxx17_h07bc746_0" }
libarrow = { version = "==19.0.1", build = "hd4a375f_7_cpu" }
libarrow-acero = { version = "==19.0.1", build = "hf07054f_7_cpu" }
libarrow-dataset = { version = "==19.0.1", build = "hf07054f_7_cpu" }
libarrow-substrait = { version = "==19.0.1", build = "he749cb8_7_cpu" }
libblas = { version = "==3.9.0", build = "31_h10e41b3_openblas" }
libbrotlicommon = { version = "==1.1.0", build = "hd74edd7_2" }
libbrotlidec = { version = "==1.1.0", build = "hd74edd7_2" }
libbrotlienc = { version = "==1.1.0", build = "hd74edd7_2" }
libcblas = { version = "==3.9.0", build = "31_hb3479ef_openblas" }
libcrc32c = { version = "==1.1.2", build = "hbdafb3b_0" }
libcurl = { version = "==8.13.0", build = "h73640d1_0" }
libcxx = { version = "==20.1.2", build = "ha82da77_0" }
libdeflate = { version = "==1.23", build = "hec38601_0" }
libedit = { version = "==3.1.20250104", build = "pl5321hafb1f1b_0" }
libev = { version = "==4.33", build = "h93a5062_2" }
libevent = { version = "==2.1.12", build = "h2757513_1" }
libexpat = { version = "==2.7.0", build = "h286801f_0" }
libffi = { version = "==3.4.6", build = "h1da3d7d_1" }
libgfortran = { version = "==14.2.0", build = "heb5dd2a_105" }
libgfortran5 = { version = "==14.2.0", build = "h2c44a93_105" }
libgoogle-cloud = { version = "==2.36.0", build = "h9484b08_1" }
libgoogle-cloud-storage = { version = "==2.36.0", build = "h7081f7f_1" }
libgrpc = { version = "==1.71.0", build = "hf667ad3_0" }
libiconv = { version = "==1.18", build = "hfe07756_1" }
libjpeg-turbo = { version = "==3.0.0", build = "hb547adb_1" }
liblapack = { version = "==3.9.0", build = "31_hc9a63f6_openblas" }
liblzma = { version = "==5.8.1", build = "h39f12f2_0" }
libmpdec = { version = "==4.0.0", build = "h99b78c6_0" }
libnghttp2 = { version = "==1.64.0", build = "h6d7220d_0" }
libopenblas = { version = "==0.3.29", build = "openmp_hf332438_0" }
libopentelemetry-cpp = { version = "==1.20.0", build = "h0181452_0" }
libopentelemetry-cpp-headers = { version = "==1.20.0", build = "hce30654_0" }
libparquet = { version = "==19.0.1", build = "h636d7b7_7_cpu" }
libpng = { version = "==1.6.47", build = "h3783ad8_0" }
libprotobuf = { version = "==5.29.3", build = "hccd9074_0" }
libre2-11 = { version = "==2024.7.2", build = "hd41c47c_3" }
libsodium = { version = "==1.0.20", build = "h99b78c6_0" }
libsqlite = { version = "==3.49.1", build = "h3f77e49_2" }
libssh2 = { version = "==1.11.1", build = "h9cc3647_0" }
libthrift = { version = "==0.21.0", build = "h64651cc_0" }
libtiff = { version = "==4.7.0", build = "h551f018_3" }
libutf8proc = { version = "==2.10.0", build = "hda25de7_0" }
libwebp-base = { version = "==1.5.0", build = "h2471fea_0" }
libxcb = { version = "==1.17.0", build = "hdb1d25a_0" }
libxml2 = { version = "==2.13.7", build = "h52572c6_1" }
libzlib = { version = "==1.3.1", build = "h8359307_2" }
llvm-openmp = { version = "==20.1.2", build = "hdb05f8b_1" }
lz4-c = { version = "==1.10.0", build = "h286801f_1" }
markupsafe = { version = "==3.0.2", build = "py313ha9b7d5b_1" }
matplotlib = { version = "==3.10.1", build = "py313h39782a4_0" }
matplotlib-base = { version = "==3.10.1", build = "py313haaf02c0_0" }
matplotlib-inline = { version = "==0.1.7", build = "pyhd8ed1ab_1" }
mistune = { version = "==3.1.3", build = "pyh29332c3_0" }
multidict = { version = "==6.5.0", build = "py313h6347b5a_0" }
munkres = { version = "==1.1.4", build = "pyh9f0ad1d_0" }
nbclient = { version = "==0.10.2", build = "pyhd8ed1ab_0" }
nbconvert-core = { version = "==7.16.6", build = "pyh29332c3_0" }
nbformat = { version = "==5.10.4", build = "pyhd8ed1ab_1" }
ncurses = { version = "==6.5", build = "h5e97a16_3" }
nest-asyncio = { version = "==1.6.0", build = "pyhd8ed1ab_1" }
nlohmann_json = { version = "==3.12.0", build = "ha1acc90_0" }
notebook = { version = "==7.4.0", build = "pyhd8ed1ab_0" }
notebook-shim = { version = "==0.2.4", build = "pyhd8ed1ab_1" }
numpy = { version = "==2.2.4", build = "py313h41a2e72_0" }
oauthlib = { version = "==3.3.1", build = "pyhd8ed1ab_0" }
openjpeg = { version = "==2.5.3", build = "h8a3d83b_0" }
openssl = { version = "==3.5.0", build = "h81ee809_1" }
orc = { version = "==2.1.1", build = "hd90e43c_1" }
overrides = { version = "==7.7.0", build = "pyhd8ed1ab_1" }
packaging = { version = "==24.2", build = "pyhd8ed1ab_2" }
pandas = { version = "==2.2.3", build = "py313h668b085_3" }
pandas-gbq = { version = "==0.28.0", build = "pyhd8ed1ab_0" }
pandocfilters = { version = "==1.5.0", build = "pyhd8ed1ab_0" }
parso = { version = "==0.8.4", build = "pyhd8ed1ab_1" }
pexpect = { version = "==4.9.0", build = "pyhd8ed1ab_1" }
pickleshare = { version = "==0.7.5", build = "pyhd8ed1ab_1004" }
pillow = { version = "==11.1.0", build = "py313hb37fac4_0" }
pip = { version = "==25.0.1", build = "pyh145f28c_0" }
pkgutil-resolve-name = { version = "==1.3.10", build = "pyhd8ed1ab_2" }
platformdirs = { version = "==4.3.7", build = "pyh29332c3_0" }
prometheus-cpp = { version = "==1.3.0", build = "h0967b3e_0" }
prometheus_client = { version = "==0.21.1", build = "pyhd8ed1ab_0" }
prompt-toolkit = { version = "==3.0.50", build = "pyha770c72_0" }
prompt_toolkit = { version = "==3.0.50", build = "hd8ed1ab_0" }
propcache = { version = "==0.3.1", build = "py313ha9b7d5b_0" }
proto-plus = { version = "==1.26.1", build = "pyhd8ed1ab_0" }
protobuf = { version = "==5.29.3", build = "py313hfa7305b_0" }
psutil = { version = "==7.0.0", build = "py313h90d716c_0" }
pthread-stubs = { version = "==0.4", build = "hd74edd7_1002" }
ptyprocess = { version = "==0.7.0", build = "pyhd8ed1ab_1" }
pure_eval = { version = "==0.2.3", build = "pyhd8ed1ab_1" }
pyarrow = { version = "==19.0.1", build = "py313h39782a4_0" }
pyarrow-core = { version = "==19.0.1", build = "py313hf9431ad_0_cpu" }
pyasn1 = { version = "==0.6.1", build = "pyhd8ed1ab_2" }
pyasn1-modules = { version = "==0.4.2", build = "pyhd8ed1ab_0" }
pycparser = { version = "==2.22", build = "pyh29332c3_1" }
pydata-google-auth = { version = "==1.9.1", build = "pyhd8ed1ab_0" }
pygments = { version = "==2.19.1", build = "pyhd8ed1ab_0" }
pyjwt = { version = "==2.10.1", build = "pyhd8ed1ab_0" }
pyobjc-core = { version = "==11.0", build = "py313hb6afeec_0" }
pyobjc-framework-cocoa = { version = "==11.0", build = "py313hb6afeec_0" }
pyopenssl = { version = "==25.1.0", build = "pyhd8ed1ab_0" }
pyparsing = { version = "==3.2.3", build = "pyhd8ed1ab_1" }
pysocks = { version = "==1.7.1", build = "pyha55dd90_7" }
python = { version = "==3.13.3", build = "h81fe080_101_cp313" }
python-dateutil = { version = "==2.9.0.post0", build = "pyhff2d567_1" }
python-fastjsonschema = { version = "==2.21.1", build = "pyhd8ed1ab_0" }
python-json-logger = { version = "==2.0.7", build = "pyhd8ed1ab_0" }
python-tzdata = { version = "==2025.2", build = "pyhd8ed1ab_0" }
python_abi = { version = "==3.13", build = "6_cp313" }
pytz = { version = "==2025.2", build = "pyhd8ed1ab_0" }
pyu2f = { version = "==0.1.5", build = "pyhd8ed1ab_1" }
pyyaml = { version = "==6.0.2", build = "py313ha9b7d5b_2" }
pyzmq = { version = "==26.4.0", build = "py313he6960b1_0" }
qhull = { version = "==2020.2", build = "h420ef59_5" }
re2 = { version = "==2024.7.2", build = "h6589ca4_3" }
readline = { version = "==8.2", build = "h1d1bf99_2" }
referencing = { version = "==0.36.2", build = "pyh29332c3_0" }
requests = { version = "==2.32.3", build = "pyhd8ed1ab_1" }
requests-oauthlib = { version = "==2.0.0", build = "pyhd8ed1ab_1" }
rfc3339-validator = { version = "==0.1.4", build = "pyhd8ed1ab_1" }
rfc3986-validator = { version = "==0.1.1", build = "pyh9f0ad1d_0" }
rpds-py = { version = "==0.24.0", build = "py313hb5fa170_0" }
rsa = { version = "==4.9.1", build = "pyhd8ed1ab_0" }
scikit-learn = { version = "==1.7.0", build = "py313hecba28c_1" }
scipy = { version = "==1.15.2", build = "py313h9a24e0a_0" }
send2trash = { version = "==1.8.3", build = "pyh31c8845_1" }
setuptools = { version = "==78.1.0", build = "pyhff2d567_0" }
six = { version = "==1.17.0", build = "pyhd8ed1ab_0" }
snappy = { version = "==1.2.1", build = "h98b9ce2_1" }
sniffio = { version = "==1.3.1", build = "pyhd8ed1ab_1" }
soupsieve = { version = "==2.5", build = "pyhd8ed1ab_1" }
stack_data = { version = "==0.6.3", build = "pyhd8ed1ab_1" }
terminado = { version = "==0.18.1", build = "pyh31c8845_0" }
threadpoolctl = { version = "==3.6.0", build = "pyhecae5ae_0" }
tinycss2 = { version = "==1.4.0", build = "pyhd8ed1ab_0" }
tk = { version = "==8.6.13", build = "h5083fa2_1" }
tomli = { version = "==2.2.1", build = "pyhd8ed1ab_1" }
tornado = { version = "==6.4.2", build = "py313h90d716c_0" }
traitlets = { version = "==5.14.3", build = "pyhd8ed1ab_1" }
types-python-dateutil = { version = "==2.9.0.20241206", build = "pyhd8ed1ab_0" }
typing-extensions = { version = "==4.13.2", build = "h0e9735f_0" }
typing_extensions = { version = "==4.13.2", build = "pyh29332c3_0" }
typing_utils = { version = "==0.1.0", build = "pyhd8ed1ab_1" }
tzdata = { version = "==2025b", build = "h78e105d_0" }
uri-template = { version = "==1.3.0", build = "pyhd8ed1ab_1" }
urllib3 = { version = "==2.4.0", build = "pyhd8ed1ab_0" }
wcwidth = { version = "==0.2.13", build = "pyhd8ed1ab_1" }
webcolors = { version = "==24.11.1", build = "pyhd8ed1ab_0" }
webencodings = { version = "==0.5.1", build = "pyhd8ed1ab_3" }
websocket-client = { version = "==1.8.0", build = "pyhd8ed1ab_1" }
widgetsnbextension = { version = "==4.0.14", build = "pyhd8ed1ab_0" }
xorg-libxau = { version = "==1.0.12", build = "h5505292_0" }
xorg-libxdmcp = { version = "==1.1.5", build = "hd74edd7_0" }
yaml = { version = "==0.2.5", build = "h3422bc3_2" }
yarl = { version = "==1.20.1", build = "py313ha9b7d5b_0" }
zeromq = { version = "==4.3.5", build = "hc1bb282_7" }
zipp = { version = "==3.21.0", build = "pyhd8ed1ab_1" }
zlib = { version = "==1.3.1", build = "h8359307_2" }
zstandard = { version = "==0.23.0", build = "py313h90d716c_1" }
zstd = { version = "==1.5.7", build = "h6491c7d_2" }
